# material-editor

./: .gitignore  README.md  _harmonize_worker.py  _lama_worker.py  build.py  build_nuitka.py  harmonize.py  main.py  patchmatch_inpaint.py  pyproject.toml  requirements-build.txt  requirements.txt  run.py
.github/workflows/: build.yml
core/: __init__.py  export.py  layer.py  material.py
ui/: __init__.py  canvas.py  canvas_optimized.py  color_picker.py  controls.py  dialogs.py  graphics_canvas.py
utils/: __init__.py  file_utils.py  image_utils.py
