[project]
name = "material-editor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chrizzy", email = "me@chrizzy.cc" }
]
dependencies = [
    "pyside6>=6.9.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = []
